Added Delegate simple demo and Unobtrusive priciple demo